--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/content/:path*",
+      "destination": "/index.html"
+    }
   ]
 }
